--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 
     /* Modules */
     "module": "ESNext" /* Specify what module code is generated. */,
-    "moduleResolution": "Bundler" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "moduleResolution": "Node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "resolveJsonModule": true, // Ensure JSON imports are resolved
     "skipLibCheck": true,
 
     /* JavaScript Support */
@@ -25,8 +26,13 @@
     "exactOptionalPropertyTypes": true /* Interpret optional property types as written, rather than adding 'undefined'. */,
     "noImplicitReturns": true /* Enable error reporting for codepaths that do not explicitly return in a function. */,
     "noImplicitOverride": true /* Ensure overriding members in derived classes are marked with an override modifier. */,
-    "useUnknownInCatchVariables": true /* Ensure 'unknown' is used for catch clause variables. */
+    "useUnknownInCatchVariables": true /* Ensure 'unknown' is used for catch clause variables. */,
+    "composite": true,
+    "rootDir": "src",
+    "outDir": "dist"
   },
+  "include": ["src/**/*"],
+  "exclude": ["src/**/*.json"],
   "files": [],
   "references": [
     {
@@ -37,5 +43,6 @@
     },
     {
       "path": "./cypress"
-    }]
+    }
+  ]
 }
