--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cypress": "^0.1.6",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.3",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^8.2.2",
     "cypress": "^13.17.0",
     "nodemon": "^3.1.3",
@@ -32,7 +33,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "typescript": "^5.5.3",
-    "vitest": "^2.0.3",
+    "vitest": "^2.1.9",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
